cabal-version: 3.0
name:          related-post-gen
version:       0.0.0.0
author:        thelissimus
maintainer:    thelissimus@tuta.io
build-type:    Simple

common options
  default-language: GHC2024
  ghc-options:
    -Wall -Wextra -fspecialise-aggressively -fllvm -optlo-O3 -O2
    -funbox-strict-fields -fspec-constr

library
  import:          options
  hs-source-dirs:  src
  exposed-modules: RelatedPostGen
  build-depends:
    , aeson
    , base               >=4.7     && <5
    , deepseq
    , primitive
    , storable-tuple
    , text-short
    , vector
    , vector-hashtables  ==0.1.2.0

executable related-post-gen
  import:         options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , aeson
    , base              >=4.7 && <5
    , bytestring
    , deepseq
    , related-post-gen
    , time
    , vector

benchmark related-post-gen-bench
  import:         options
  ghc-options:    -with-rtsopts=-A32m -fproc-alignment=64
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: bench
  build-depends:
    , aeson
    , base              >=4.7 && <5
    , bytestring
    , deepseq
    , related-post-gen
    , tasty-bench
