(lang dune 3.10)

(name okaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name okaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends dune ppx_deriving ppx_deriving_yojson base stdio yojson)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
