[package]
name = "rust_rayon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mimalloc = "0.1.39"
num_cpus = "1.16.0"
rayon = "1.8.0"
rustc-hash = "1.1.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
smallvec = { version = "1.11.1", features = ["serde", "const_generics", "union", "const_new"] }

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
strip = true
